--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "moch": ".node_modules/bin/mocha"
   },
   "keywords": [],
   "author": "",
